Resolved "collapsing margins" glitch in admin panel togglers

--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -854,7 +854,8 @@ legend {
     }
 }
 
-.adminData .adminRow:first-child {
+.adminData .adminRow:first-child,
+.collapsible > .adminRow:first-child {
     margin-top: 0;
 }
 
